# OutboundEval

./: OutboundEval_GenericLLMOrchestration_Section33.md  OutboundEval_最终实现方案.md  README.md  pyproject.toml
eval_skills/merchant_live_config/: SKILL.md  faq.md  judge_prompts.md  persona_bank.yaml  rubric.yaml  scenario_templates.yaml  task_schema.yaml
eval_skills/rider_contract/: SKILL.md  faq.md  judge_prompts.md  persona_bank.yaml  rubric.yaml  scenario_templates.yaml  task_schema.yaml
outbound_eval/: __init__.py  __main__.py  badcase.py  cli.py  config.py  golden.py
outbound_eval/adapters/: __init__.py  openai_compatible.py
outbound_eval/compiler/: __init__.py  compile_qa.py  compile_service.py  flow_graph_builder.py  llm_spec_extractor.py  llm_task_compiler.py  markdown_ast.py  rubric_generator.py  section_splitter.py  spec_normalizer.py  spec_validator.py  task_compiler_prompts.py  variable_extractor.py
outbound_eval/domain/: __init__.py  enums.py  ids.py  schemas_episode.py  schemas_judge.py  schemas_markdown.py  schemas_model.py  schemas_persona.py  schemas_report.py  schemas_scenario.py  schemas_score.py  schemas_task.py  schemas_understanding.py
outbound_eval/evaluator/: __init__.py  base.py  constraint_checker.py  ensemble.py  evidence_mapper.py  exception_checker.py  finding_aggregator.py  flow_checker.py  knowledge_checker.py  rule_checker.py  (+1 more)
runs/: outbound_eval.db
samples/: merchant_live_config.md  rider_contract.md
scripts/: safe_e2e_run.py
tests/: test_acceptance.py  test_risk_guard_coverage.py  test_structured_client.py
(+70 files in other folders)
